--- a/style.css
+++ b/style.css
@@ -107,4 +107,38 @@
   .links a:hover {
     text-decoration: underline;
   }
+
+/* REGISTRO CSS*/
+
+.registro-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  text-align: left;
+}
+
+.registro-container h1 {
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: #0059b2;
+}
+
+.registro-container label {
+  display: block;
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+}
+
+.registro-container input {
+  width: 100%;
+  padding: 0.75rem;
+  margin-bottom: 1.2rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+
   
