feat: :zap: Apartado recuperar
Quedo la estructura del apartado recuperar contraseña

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 
+/*INICIO DE SESIÒN CSS*/
+
 * {
     margin: 0;
     padding: 0;
@@ -155,3 +157,5 @@
   width: 200px;
   margin-bottom: 5px; 
 }
+
+
