--- a/style.css
+++ b/style.css
@@ -158,4 +158,37 @@
   margin-bottom: 5px; 
 }
 
+/* RECUPERAR CONTRASEÑA CSS */
 
+.info-text {
+  text-align: center;
+  margin: 20px 0;
+  color: #555;
+  font-size: 1rem;
+  line-height: 1.4;
+  padding: 0 15px;
+}
+
+.header-acme .slogan-acme {
+  margin-bottom: 5px;
+}
+
+.form-title {
+  margin-bottom: 30px;
+}
+
+.recuperar-container {
+  max-width: 500px;
+  height: 700px;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #ffffff;
+  border-radius: 20px; 
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  text-align: center;
+}
+
+.logorecuperar img{
+  width: 200px;
+  margin-bottom: 5px; 
+}
