--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@
   font-size: 16px;
 }
 
-.btn-submit {
+.btn-submit{
   width: 100%;
   padding: 15px;
   background-color: #0066cc;
@@ -247,7 +247,11 @@
   text-transform: uppercase;
   cursor: pointer;
   margin-top: 10px;
+  text-decoration: none; 
+  display: inline-block; 
+  text-align: center;
 }
+
 
 @media (max-width: 480px) {
   .form-group input {
