--- a/style.css
+++ b/style.css
@@ -426,3 +426,23 @@
     gap: 10px;
   }
 }
+
+/*VUELOS DISPONIBLES CSS*/
+
+.vuelosdisponibles-container{
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #ffffff;
+  border-radius: 20px; 
+  box-shadow: 0 5px 12px rgba(0,0,0,0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.logo-vuelosdisponibles img {
+  width: 200px;
+  margin-bottom: 5px; 
+}
