--- a/style.css
+++ b/style.css
@@ -314,6 +314,11 @@
   margin-top: 30px;
 }
 
+.menu-icon img{
+  width: 50px;
+  height: 40px;
+}
+
 /*BUSCAR VUELOS CSS*/
 
 .buscarvuelos-container{
