--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@
   
   .mobile-only {
     display: block;
-    padding: 2rem 1rem;
   }
   
  
@@ -191,6 +190,19 @@
   width: 200px;
   margin-bottom: 5px; 
 }
+
+.header-degradado {
+  background: linear-gradient(to right, #d946ef, #3b82f6); /* rosa a azul */
+  padding: 1rem;
+  border-radius: 0 0 20px 20px;
+  text-align: center;
+}
+
+.header-degradado img {
+  max-width: 150px;
+  height: auto;
+}
+
 
 /*CREAR CONTRASEÑA CSS*/
 
