--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,18 @@
     text-decoration: underline;
   }
 
+  .header-degradado {
+    background: linear-gradient(to right, #d946ef, #3b82f6); /* rosado a azul */
+    padding: 1rem;
+    text-align: center;
+}
+
+.header-degradado img {
+    max-width: 150px;
+    height: auto;
+}
+
+
 /* REGISTRO CSS*/
 
 
@@ -191,18 +203,6 @@
   margin-bottom: 5px; 
 }
 
-.header-degradado {
-  background: linear-gradient(to right, #d946ef, #3b82f6); /* rosa a azul */
-  padding: 1rem;
-  border-radius: 0 0 20px 20px;
-  text-align: center;
-}
-
-.header-degradado img {
-  max-width: 150px;
-  height: auto;
-}
-
 
 /*CREAR CONTRASEÑA CSS*/
 
@@ -278,7 +278,7 @@
 
 .menu-container{
   max-width: 500px;
-  margin: 0 auto;
+  margin: 0;
   padding: 2rem;
   background-color: #ffffff;
   border-radius: 20px; 
